@@ -37,6 +37,7 @@
 - Fix: [#22808] Incorrect support rotation on some Mini Roller Coaster track pieces.
 - Fix: [#22857] Side-Friction Roller Coaster train clips through slopes.
 - Fix: [#22880] macOS builds lack asset packs and scenario patches.
+- Fix: [#22891] [Plugin] getInstalledObject API function not implemented.
 - Fix: [objects#346] Invalid refund price for Brick Base Block scenery item.
 
 0.4.14 (2024-09-01)
